--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <script src="index.js"></script>
     <style>
@@ -11,7 +11,7 @@
       svg#art {
         margin-top: 1em;
       }
-      div{
+      div {
         position: absolute;
         width: 80%;
         height: 100%;
@@ -25,20 +25,17 @@
   <body>
     <div>
       <svg
-      version="1.1"
-      width="500"
-      height="500"
-      xmlns="http://www.w3.org/2000/svg"
-      id="art"
-    >
-      <rect width="100%" height="100%" fill="white" />
-    </svg>
-    Brush:
-    Circle
-    <input type="radio" name="a" value="b">
-    Square
-    <input type="radio" name="a" value="c"
-
+        version="1.1"
+        width="500"
+        height="500"
+        xmlns="http://www.w3.org/2000/svg"
+        id="art"
+      >
+        <rect width="100%" height="100%" fill="white" />
+      </svg>
+      Brush: Circle
+      <input type="radio" name="a" value="b">
+      Square <input type="radio" name="a" value="c">
     </div>
   </body>
 </html>
