--- a/index.html
+++ b/index.html
@@ -1,25 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="style.css" rel="stylesheet" />
     <script src="index.js"></script>
-    <style>
-      body {
-        display: flex;
-        justify-content: center;
-        background-color: blue;
-      }
-      svg#art {
-        margin-top: 1em;
-      }
-      div {
-        position: absolute;
-        width: 80%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        background-color: black;
-      }
-    </style>
     <title>Aaarto</title>
   </head>
   <body>
@@ -33,9 +16,14 @@
       >
         <rect width="100%" height="100%" fill="white" />
       </svg>
-      Brush: Circle
-      <input type="radio" name="a" value="b">
-      Square <input type="radio" name="a" value="c">
+      <section>
+        <h3>Brush Shape</h3>
+        <label>
+          Circle
+          <input type="radio" name="a" value="b" />
+        </label>
+        <label> Square <input type="radio" name="a" value="c" /> </label>
+      </section>
     </div>
   </body>
 </html>
