Add controls and panel to contain controls

--- a/index.html
+++ b/index.html
@@ -16,13 +16,22 @@
       >
         <rect width="100%" height="100%" fill="white" />
       </svg>
-      <section>
-        <h3>Brush Shape</h3>
-        <label>
-          Circle
-          <input type="radio" name="a" value="b" />
-        </label>
-        <label> Square <input type="radio" name="a" value="c" /> </label>
+      <section class="panel">
+        <section>
+          <h3>Shape</h3>
+          <label>
+            Circle
+            <input type="radio" name="a" value="b" />
+          </label>
+          <label> Square <input type="radio" name="a" value="c" /> </label>
+        </section>
+        <section>
+          <h3>Size</h3>
+          <input type="range" />
+        </section>
+        <section>
+          <h3>Color</h3>
+        </section>
       </section>
     </div>
   </body>
