Refactor, implement functionality for shape

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <rect width="100%" height="100%" fill="white" />
       </svg>
       <section class="panel">
-        <section>
+        <section id="shape">
           <h3>Shape</h3>
           <label>
             Circle
-            <input type="radio" name="a" value="b" />
+            <input type="radio" name="shape" value="circle" checked />
           </label>
-          <label> Square <input type="radio" name="a" value="c" /> </label>
+          <label> Square <input type="radio" name="shape" value="square" /> </label>
         </section>
         <section>
           <h3>Size</h3>
