--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
         xmlns="http://www.w3.org/2000/svg"
         id="art"
       >
-        <rect width="100%" height="100%" fill="white" />
+        <rect id="canvas" width="100%" height="100%" fill="white" />
       </svg>
       <section class="panel">
+        <section id="mint">
+          <button onclick="alert('Mint Not Implemented Currently')" type="color" value="#cccccc">Mint The Art</button>
+        </section>
         <section id="shape">
-          <h3>Shape</h3>
           <label>
             Circle
             <input type="radio" name="shape" value="circle" checked />
@@ -27,10 +29,13 @@
           <label>
             Square <input type="radio" name="shape" value="square" />
           </label>
+          <label>
+            Erase <input type="radio" name="shape" value="erase" />
+          </label>
         </section>
         <section id="size">
           <h3>Size</h3>
-          <input type="range" min="1" max="300" value="20" />
+          <input type="range" min="1" max="300" value="50" />
         </section>
         <section id="color">
           <h3>Color</h3>
